--- a/mStat1/ch7.ipynb
+++ b/mStat1/ch7.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -208,6 +208,96 @@
     "hist(means,  breaks = seq(0,3000, by = 200))\n",
     "print(mean(means)); sd(means)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<FloatVector - Python:0xad1d6a6c / R:0x8890d10>\n",
+       "[589.717253]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%R sqrt(var(hospitals$d))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] 0.653944\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "mean(hospitals$d<=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] 0.7492\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%R\n",
+    "simulations <- 5000\n",
+    "ans <- numeric(simulations)\n",
+    "hospitals[\"ratio\"] = hospitals$d/hospitals$b\n",
+    "for (i in 1:simulations){\n",
+    "    samples <- sample(1:length(hospitals$d),8)\n",
+    "    y <- sum(hospitals[samples,]$d)\n",
+    "    x <- sum(hospitals[samples,]$b)\n",
+    "    #print(y/x)\n",
+    "    #print(mean(hospitals[samples,]$r))\n",
+    "    if(mean(hospitals[samples,]$r) > (y/x)){\n",
+    "        ans[i] <- 1\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "mean(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
