fixed some html errors

--- a/mStat1/HW 1.ipynb
+++ b/mStat1/HW 1.ipynb
@@ -114,9 +114,9 @@
     "based on a simple random sample is found to be (.7, 2.1). Can we conclude that\n",
     "90% of households have between .7 and 2.1 children?\n",
     "\n",
-    "<b>No. We can say that with 90% confidence the average number of children per household is between that range, but this has nothing to do with the conclusions reached. \n",
+    "<b>No. We can say that with 90% confidence the average number of children per household is between that range, but this has nothing to do with the conclusions reached.</b> \n",
     "\n",
-    "We can show this with a simple script:</b>"
+    "<b>We can show this with a simple script:</b>"
    ]
   },
   {
