still working on spectral

--- a/spectral/Introduction.ipynb
+++ b/spectral/Introduction.ipynb
@@ -43,11 +43,17 @@
     "\n",
     "Where $A$ is the adjacency matrix\n",
     "\n",
-    "--------------------------\n",
+    "$$--------------------------$$\n",
     "\n",
+    "$\\mathcal{L} $ can be viewed as an operator in the space of functions $g:V(G) \\rightarrow \\mathbb{R}$ which satisfies\n",
     "\n",
+    "$$\\mathcal{L} ~ g(u) = \\frac 1 {\\sqrt{d_u}} \\sum_{\\substack{v\\\\ v \\sim u}} \\left( \\frac {g(u)}{\\sqrt{d_u}} - \\frac {g(v)}{\\sqrt{d_v}} \\right)$$\n",
     "\n",
-    "\""
+    "\"\n",
+    "\n",
+    "We need to define the inner product:\n",
+    "\n",
+    "$$<f,g> = \\sum_x f(x) g(x)$$\n"
    ]
   },
   {
