did some more spectral

--- a/spectral/Basic Graph Theory.ipynb
+++ b/spectral/Basic Graph Theory.ipynb
@@ -70,29 +70,50 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\"An edge {x,y} is said to join the vertices x and y and is denoted by xy. Thus xy and yx mean exactly the same edge. If $xy \\in E(G)$, then x and y are adjacent, or neighboring, vertices of G.\n",
+    "\n",
+    "The <i>order</i> of G is the number of vertices in G; it is denoted by |G|. The <i>size</i> of G is the number of edges in G. The size of a graph of order n is at least 0 and at most $n \\choose 2$. A graph of order n and size $n \\choose 2$ is called a complete graph.\n",
+    "\n",
+    "The set of vertices adjacent to a vertex $x \\in G$ is denoted by $\\Gamma(x)$. Also, $x \\sim y$, and $y \\sim x$ are all equivalent. The <i>degree </i> of x is $d(x) = |\\Gamma(x)|$. The <i>minimal degree</i> of the vertices of a graph G is denoted by $\\delta (G)$ and the <i>maximal degree</i> by $\\Delta (G) $. A vertex of degree 0 is said to be an <i>isolated</i> vertex. If $\\delta (G) = \\Delta (G) = k$, that is, every vertex of G has degree k, then G is said to be <i>k-regular</i> \""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\"By definition a graph does not contain a <i>loop</i>, an 'edge' joining a vertex to itself; neither does it contain <i>multiple edges</i>, that is, several 'edges' joining the same two vertices. In a <i>multigraph</i> both multiple edges and and multiple loops. When there is any danger of confusion, graphs are called <i>simple graphs</i>.\n",
+    "\n",
+    "If the edges are <i>ordered</i> pairs of vertices, then we get the notions of a <i>directed graph</i> and <i>directed multigraph</i>. An ordered pair $(a,b)$ is said to be an edge <i>directed from $a$ to $b$</i>. A vertex $x$ of a directed graph has an outdegree and an indegree: the <i>outdegree</i> $d^+(x)$ is the number of edges starting at $x$, and the <i>indegree</i> $d^-(x)$ is the number of edges ending at $x$\n",
+    "\n",
+    "A <i>path</i> is a graph P of the form\n",
+    "\n",
+    "$$V(P) = \\{x_0, x_1, ..., x_l\\}, ~~~~ E(P) = \\{x_0 x_1, x_1 x_2, ... , x_{l-1} x_l\\}.$$\n",
+    "\n",
+    "This path P is usually denoted by $x_0 x_1 ... x_l$ and $l = e(P)$, where $e(G)$ is the size or the number of edges in G, is called the <i>length</i> of P.\n",
+    "\n",
+    "A graph is <i>connected</i> if for every pair $\\{x, y\\}$ of distinct vertices there is a path from $x$ to $y$.\n",
+    "\n",
+    "\n",
+    "\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"In a graph G, let $d_v$ denote the degree of the vertex $v$. We first define the Laplacian for graphs without loops and multiple edges. To begin, we consider the matrix L,\n",
+    "\"There are several matrices naturally associated with a graph and its vector spaces. The adjacency matrix $A = A(G) = (a_{ij})$ of a graph $G$ is the $n \\times n$ matrix given by\n",
     "\n",
-    "$$L(u,v) = \\begin{cases} \n",
-    "                  d_v ~~~if ~~u = v\\\\\n",
-    "                  -1 ~~~~if ~~ u \\sim v\\\\\n",
-    "                  0 ~~~~otherwise\n",
-    "                \\end{cases}\n",
-    "              $$\n",
-    "              \n",
-    "Let T denote the diagonal matrix with the $(v,v)$-th entry having value $d_v$. The Laplacian\n",
+    "$$a_{ij} = \\begin{cases} 1 ~~ if v_i v_j \\in E(G) \\\\ 0 ~~ otherwise \\end{cases}$$\n",
     "\n",
-    "$$\\mathcal{L}(u,v) = \\begin{cases} \n",
-    "        1 ~~~ if ~~ u = v\\\\ \n",
-    "        -1/{\\sqrt{d_u d_v}} ~~~~ if ~~ u \\sim v \\\\\n",
-    "        0 ~~~~ otherwise \n",
-    "        \\end{cases}   $$\n",
+    "Let $D = (D_{ij})$ be the $n \\times n$ diagonal matrix with $D_{ii} = d(v_i)$, the degree of $v_i$ in G.  The matrix $L = D - A$ is called the <i>combinatorial Laplacian</i> or <i>Kirchhoff matrix</i>. \n",
     "\n",
-    "\n",
-    "$$\\rightarrow  \\mathcal{L} = T^{-1/2} L T^{-1/2} $$\n",
-    "\n",
-    "with the convention $T^{-1}(v,v) = 0$ if $d_v = 0$.\n",
+    "The vertex space $C_0(G)$ of a graph G is the complex vector space of all functions from V(G) into $\\mathbb{C}$. Once again we take $V(G) = \\{v_1, v_2, ... , v_n\\}$, so that dim $C_0(G) = n$,  and we write the elements of  $C_0(G)$ in the form $\\mathbf {x} = \\sum_{i=1}^n x_i v_i$ or $\\mathbf{x} = (x_i)_1^n$; here $x_i$ is the value of $\\bf{x}$ at $v_i$, also called the <i>weight</i> at $v_i$. The space  $C_0(G)$ is given the natural inner prodeuct associated with the basis $(v_i)_1^n$ :   $~~<\\mathbf{ x} , \\mathbf{ y}> = \\sum_{i=1}^n x_i \\bar {y_i}$. \n",
     "\n",
     "\""
    ]
@@ -102,26 +123,16 @@
    "metadata": {},
    "source": [
     "\"\n",
+    "The adjacency matrix A is real and symmetric, so it is <i>hermition</i>, that is, $<A \\mathbf{x}, \\mathbf{y}> = < \\mathbf{x}, A \\mathbf{y}>$. Hence its <i>numerical range</i>\n",
     "\n",
-    "We say $v$ is an isolated vertex if $d_v = 0$. A graph is said to be non-trivial if it contains at least one edge.\n",
+    "$$V(A) = \\{ <A \\mathbf{x}, \\mathbf{x}> : ~~~||\\mathbf{x}|| = 1 \\}$$\n",
     "\n",
-    "When G is k-regular, it is easy to see that\n",
+    "is a closed interval of the real line. \n",
     "\n",
-    "$$\\mathcal{L} = \\mathbb{I} - \\frac 1 k A$$\n",
+    "The <i>distinct</i> eigenvalues of A are real, say $\\mu_1 > \\mu_2 > ... > \\mu_t$, and V(A) is exactly the interval $[\\mu_t , \\mu_1]$ (I need a proof for that) \n",
     "\n",
-    "Where $A$ is the adjacency matrix\n",
     "\n",
-    "$$--------------------------$$\n",
-    "\n",
-    "$\\mathcal{L} $ can be viewed as an operator in the space of functions $g:V(G) \\rightarrow \\mathbb{R}$ which satisfies\n",
-    "\n",
-    "$$\\mathcal{L} ~ g(u) = \\frac 1 {\\sqrt{d_u}} \\sum_{\\substack{v\\\\ v \\sim u}} \\left( \\frac {g(u)}{\\sqrt{d_u}} - \\frac {g(v)}{\\sqrt{d_v}} \\right)$$\n",
-    "\n",
-    "\"\n",
-    "\n",
-    "We need to define the inner product:\n",
-    "\n",
-    "$$<f,g> = \\sum_x f(x) g(x)$$\n"
+    "\""
    ]
   },
   {
